--- a/index.html
+++ b/index.html
@@ -162,6 +162,9 @@
               <li>Created a web crawler that scraped and normalized 35+ RFCs from a multitude of mirrors to automate network protocol discovery and the dataset creation process.</li>
               <li>Engineered multi-packet flow and TCP variant generators generating 3-5 packet exchanges per session, validated with Wireshark dissectors for accuracy.</li>
             </ul>
+            <div class="mt-3 text-sm">
+              <a class="underline" href="http://www.capstone.cse.msu.edu/2025-08/projects/vectra-ai/" target="_blank" rel="noopener noreferrer">View Capstone Project</a>
+            </div>
           </div>
 
           <div class="rounded-2xl p-5 bg-white/70 dark:bg-slate-900/60 backdrop-blur card">
@@ -197,20 +200,7 @@
     <section id="projects" class="py-12" aria-labelledby="proj-title">
       <div class="reveal">
         <h2 id="proj-title" class="text-2xl font-semibold">Projects</h2>
-        <div class="mt-6 grid gap-6 sm:grid-cols-2">
-          <!-- TaskFlow -->
-          <article class="card tilt rounded-2xl p-5 bg-white/70 dark:bg-slate-900/60 backdrop-blur" aria-labelledby="taskflow-title">
-            <h3 id="taskflow-title" class="font-semibold">TaskFlow — Full Stack Productivity App</h3>
-            <ul class="mt-2 list-disc pl-4 text-sm text-slate-700 dark:text-slate-300 space-y-1">
-              <li>Built React + FastAPI task management app with real-time updates</li>
-              <li>Developed RESTful APIs with PostgreSQL and SQLAlchemy ORM</li>
-              <li>Deployed on AWS EC2 with Docker/NGINX achieving 99.9% uptime</li>
-            </ul>
-            <div class="mt-3 flex flex-wrap gap-2 text-xs" aria-label="Technologies used">
-              <span class="pill">React</span><span class="pill">FastAPI</span><span class="pill">PostgreSQL</span><span class="pill">Docker</span><span class="pill">AWS</span>
-            </div>
-          </article>
-
+        <div class="mt-6 grid gap-6">
           <!-- Packet Forge -->
           <article class="card tilt rounded-2xl p-5 bg-white/70 dark:bg-slate-900/60 backdrop-blur" aria-labelledby="packetforge-title">
             <h3 id="packetforge-title" class="font-semibold">Packet Forge — Network Protocol Engine</h3>
@@ -222,21 +212,8 @@
             <div class="mt-3 flex flex-wrap gap-2 text-xs" aria-label="Technologies used">
               <span class="pill">Python</span><span class="pill">PCAP</span><span class="pill">Wireshark</span><span class="pill">CLI</span>
             </div>
-          </article>
-
-          <!-- Aquarium -->
-          <article class="card tilt rounded-2xl p-5 bg-white/70 dark:bg-slate-900/60 backdrop-blur" aria-labelledby="aquarium-title">
-            <h3 id="aquarium-title" class="font-semibold">Aquarium Simulation — Interactive OOP App</h3>
-            <ul class="mt-2 list-disc pl-4 text-sm text-slate-700 dark:text-slate-300 space-y-1">
-              <li>Built interactive aquarium demonstrating inheritance and polymorphism</li>
-              <li>Implemented 5+ fish behaviors with 15+ dynamic objects at runtime</li>
-              <li>Optimized rendering loop, improving frame rate by 20%</li>
-            </ul>
-            <div class="mt-3 flex flex-wrap gap-2 text-xs" aria-label="Technologies used">
-              <span class="pill">C++</span><span class="pill">wxWidgets</span><span class="pill">OOP</span>
-            </div>
             <div class="mt-4 flex items-center gap-4 text-sm">
-              <a class="underline" href="https://github.com/yejilee2305/Aquarium" target="_blank" rel="noopener noreferrer">GitHub Repo</a>
+              <a class="underline" href="http://www.capstone.cse.msu.edu/2025-08/projects/vectra-ai/" target="_blank" rel="noopener noreferrer">View Capstone Project</a>
             </div>
           </article>
         </div>
@@ -328,7 +305,7 @@
         </div>
         <div>
           <h3 class="font-semibold">Michigan State University — East Lansing, MI</h3>
-          <p class="text-slate-700 dark:text-slate-300">Bachelor of Science in Computer Science · Minor in Business</p>
+          <p class="text-slate-700 dark:text-slate-300">Bachelor of Science in Computer Science, College of Engineering · Minor in Business</p>
           <p class="text-sm text-slate-500">Expected Dec 2025 · Dean's List</p>
           <div class="mt-3">
             <h4 class="font-medium">Relevant Coursework</h4>
