Add Automated Meeting Notes project, update capstone dates

--- a/index.html
+++ b/index.html
@@ -216,6 +216,22 @@
               <a class="underline" href="http://www.capstone.cse.msu.edu/2025-08/projects/vectra-ai/" target="_blank" rel="noopener noreferrer">View Capstone Project</a>
             </div>
           </article>
+
+          <!-- Automated Meeting Notes -->
+          <article class="card tilt rounded-2xl p-5 bg-white/70 dark:bg-slate-900/60 backdrop-blur" aria-labelledby="meeting-notes-title">
+            <h3 id="meeting-notes-title" class="font-semibold">Automated Meeting Notes System</h3>
+            <ul class="mt-2 list-disc pl-4 text-sm text-slate-700 dark:text-slate-300 space-y-1">
+              <li>Built AI-powered app that transforms audio/video recordings into organized meeting docs</li>
+              <li>Integrated OpenAI Whisper for transcription and GPT-4 for extracting action items and summaries</li>
+              <li>Developed FastAPI backend with PostgreSQL and Slack/email notifications</li>
+            </ul>
+            <div class="mt-3 flex flex-wrap gap-2 text-xs" aria-label="Technologies used">
+              <span class="pill">Python</span><span class="pill">FastAPI</span><span class="pill">OpenAI</span><span class="pill">PostgreSQL</span><span class="pill">Slack API</span>
+            </div>
+            <div class="mt-4 flex items-center gap-4 text-sm">
+              <a class="underline" href="https://github.com/yejilee2305/Automated-Meeting-Notes-System" target="_blank" rel="noopener noreferrer">GitHub Repo</a>
+            </div>
+          </article>
         </div>
       </div>
     </section>
