Add live demo link for Meeting Notes project

--- a/index.html
+++ b/index.html
@@ -229,6 +229,7 @@
               <span class="pill">Python</span><span class="pill">FastAPI</span><span class="pill">OpenAI</span><span class="pill">PostgreSQL</span><span class="pill">Slack API</span>
             </div>
             <div class="mt-4 flex items-center gap-4 text-sm">
+              <a class="underline" href="https://automated-meeting-notes-system.onrender.com" target="_blank" rel="noopener noreferrer">Live Demo</a>
               <a class="underline" href="https://github.com/yejilee2305/Automated-Meeting-Notes-System" target="_blank" rel="noopener noreferrer">GitHub Repo</a>
             </div>
           </article>
