update on description

--- a/index.html
+++ b/index.html
@@ -204,6 +204,7 @@
           <!-- Packet Forge -->
           <article class="card tilt rounded-2xl p-5 bg-white/70 dark:bg-slate-900/60 backdrop-blur" aria-labelledby="packetforge-title">
             <h3 id="packetforge-title" class="font-semibold">Packet Forge — Network Protocol Engine</h3>
+            <p class="mt-1 text-xs text-slate-500 dark:text-slate-400">MSU Capstone Project — Vectra AI</p>
             <ul class="mt-2 list-disc pl-4 text-sm text-slate-700 dark:text-slate-300 space-y-1">
               <li>Created PCAP generator producing 90+ RFC-compliant packet flows</li>
               <li>Built CLI integrating 3 RFC mirrors, mapping 35+ protocols</li>
