--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
           Yeji Lee
         </h1>
         <p class="mt-4 text-lg text-slate-600 dark:text-slate-300 max-w-2xl">
-          Software Engineer building microservices that cut integration time by 45%. Full-stack developer with experience in React, FastAPI, AWS, and network protocol engineering.
+          Computer Science senior at Michigan State University passionate about full-stack development and network engineering. Experience with React, FastAPI, AWS, and building scalable backend systems.
         </p>
         <p class="mt-2 text-sm text-violet-600 dark:text-violet-400 font-medium">
           Seeking full-time Software Engineering roles starting December 2025
@@ -293,7 +293,6 @@
               <span class="pill">Wireshark</span>
               <span class="pill">PCAP Analysis</span>
               <span class="pill">Network Protocols</span>
-              <span class="pill">CompTIA Security+</span>
             </div>
           </div>
           <div>
