--- a/index.html
+++ b/index.html
@@ -234,6 +234,23 @@
               <a class="underline" href="https://github.com/yejilee2305/Automated-Meeting-Notes-System" target="_blank" rel="noopener noreferrer">GitHub Repo</a>
             </div>
           </article>
+
+          <!-- MSU Clubs App -->
+          <article class="card tilt rounded-2xl p-5 bg-white/70 dark:bg-slate-900/60 backdrop-blur" aria-labelledby="msu-clubs-title">
+            <h3 id="msu-clubs-title" class="font-semibold">MSU Clubs App</h3>
+            <p class="mt-1 text-xs text-slate-500 dark:text-slate-400">CSE 476 Mobile App Development — Team of 6</p>
+            <ul class="mt-2 list-disc pl-4 text-sm text-slate-700 dark:text-slate-300 space-y-1">
+              <li>Built Android app helping 1,000+ MSU students discover and manage 500+ campus club memberships.</li>
+              <li>Implemented SQL database backend storing club info, events, and user profiles with 15+ relational tables.</li>
+              <li>Developed 8+ interactive screens including club search, event calendar, and membership tracking features.</li>
+            </ul>
+            <div class="mt-3 flex flex-wrap gap-2 text-xs" aria-label="Technologies used">
+              <span class="pill">Java</span><span class="pill">Android</span><span class="pill">SQL</span><span class="pill">Gradle</span>
+            </div>
+            <div class="mt-4 flex items-center gap-4 text-sm">
+              <a class="underline" href="https://github.com/yejilee2305/MSU_clubs" target="_blank" rel="noopener noreferrer">GitHub Repo</a>
+            </div>
+          </article>
         </div>
       </div>
     </section>
